refactor: Changes the while condition inside run method